@@ -1,3 +1,8 @@
+2017-05-19: 1.4.7:
+------------------
+  * Fixes for Python 2 Unicode conversion in win32.py
+
+
 2017-05-17: 1.4.6:
 ------------------
   * Fix cwp.py after changes to menuinst.knownfolders
